# Dashboard

./: Cargo.toml  README.md  build.rs  flake.nix  shell.nix
src/: main.rs  serial.rs
ui/: app-window.slint  dashboard.slint
