[package]
name = "dashboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = { version = "1.8.0", features = ["backend-winit"] }

[build-dependencies]
slint-build = "1.8.0"

[target.aarch64-unknown-linux-gnu]
linker = "aarch64-unknown-linux-gnu-gcc"
ar = "aarch64-linux-gnu-ar"

