[package]
name = "dashboard"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# slint = "1.8.0"
slint = { version = "1.8", default-features = false, features = ["backend-winit-wayland", "renderer-femtovg", "compat-1-2"] }
serialport = "4.7.1"

[build-dependencies]
slint-build = "1.8.0"

[target.aarch64-unknown-linux-gnu]
linker = "aarch64-buildroot-linux-gnu-gcc"
